re structured my html

--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
 
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1"
-        name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Great Idea!</title>
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
-        rel="stylesheet">
-  <link href="css/index.css"
-        rel="stylesheet"><!--[if lt IE 9]>
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"rel="stylesheet">
+  <link href="css/index.css"rel="stylesheet"><!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
+    <title>Great Idea!</title>
 </head>
 <body>
+
   <div class="container">
     <header>
       <nav>
         <a href="services.html">Services</a> 
-        <a href="#">Product</a> <a href="#">Vision</a> 
-        <a href="#">Features</a> <a href="#">About</a> 
-        <a href="#">Contact</a>
+        <a href="#product">Product</a> 
+        <a href="#vision">Vision</a> 
+        <a href="#features">Features</a> 
+        <a href="#about">About</a> 
+        <a href="#contact">Contact</a>
       </nav>
-      <a href="index.html"><img alt="Great Idea! Company logo."
-           class="logo"
-           src="img/logo.png"></a>
+      <a href="index.html"><img alt="Great Idea! Company logo." class="logo" src="img/logo.png"></a>
     </header>
-  
+   
     <main>
       <div class="cta">
         <div class="cta-text">
@@ -35,10 +34,7 @@
           Demand</h1><a href="#">
           <p>Get Started</p></a>
         </div>
-
-        <div><img alt="Image of a code snippet."
-             class="header-img"
-             src="img/header-img.png"></div>
+        <div><img alt="Image of a code snippet." class="header-img" src="img/header-img.png"></div>
       </div>
 
       <div class="middle-content">
@@ -53,9 +49,7 @@
             <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
           </section>
 
-        </div><img alt="Image of code snippets across the screen"
-             class="middle-img"
-             src="img/mid-page-accent.jpg">
+        </div><img alt="Image of code snippets across the screen" class="middle-img" src="img/mid-page-accent.jpg">
         <div class="bottom-content">
           <section class="text-content">
             <h3>Services</h3>
@@ -84,8 +78,9 @@
     </div>
 
     <footer>
-      <small>Copyright Great Idea! 2018</small>
+      <p>Copyright Great Idea! 2018</p>
     </footer>
   </div>
-</body>
+
+    </body>
 </html>
